Implemented and tested ef.core code first with migrations using mariadb

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "OpenSkyConnectionString": "server=mariadb;user id=openskyapi;password=opensky;database=opensky"
+  },
   "AllowedHosts": "*"
 }
