First elements of authentication controller and surrounding requirements

--- a/OpenSky.API/appsettings.Development.json
+++ b/OpenSky.API/appsettings.Development.json
@@ -7,6 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "OpenSkyConnectionString":  "server=opensky.elvis.local;user id=openskyapi;password=opensky;database=opensky" 
+    "OpenSkyConnectionString": "server=opensky.elvis.local;user id=openskyapi;password=opensky;database=opensky"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost",
+    "ValidIssuer": "http://localhost",
+    "Secret": "yfV5oLGbGKj77x$h3@^w2pWkzA5N^5GMNNj$pj4w*Iq@j"
   }
 }
