--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,7 @@
     <Product>OpenSky</Product>
     <Description>Core API for OpenSky</Description>
     <Copyright>sushi.at for OpenSky 2021</Copyright>
+    <UserSecretsId>bd3c3b45-7e32-4368-838d-2fcf013bdb71</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
