--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -7,12 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "OpenSkyConnectionString": "server=mariadb;user id=openskyapi;password=opensky;database=opensky"
+    "OpenSkyConnectionString": ""
   },
   "JWT": {
-    "ValidAudience": "https://www.opensky.to",
-    "ValidIssuer": "https://api.opensky.to",
-    "Secret": "yfV5oLGbGKj77x$h3@^w2pWkzA5N^5GMNNj$pj4w*Iq@j"
+    "ValidAudience": "",
+    "ValidIssuer": "",
+    "Secret": ""
   },
   "AllowedHosts": "*"
 }
