Added most of the user authentication items
Register/Login
Validate email
Added (but not tested) Google reCAPTCHAv3 service

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -14,5 +14,21 @@
     "ValidIssuer": "",
     "Secret": ""
   },
+  "Email": {
+    "SmtpServer": "",
+    "SmtpPort": 25,
+    "FromAddress": "",
+    "UserName": "",
+    "Password": "",
+    "SecureSocketOptions": "Auto"
+  },
+  "OpenSky": {
+    "DiscordInviteUrl": "",
+    "LogoUrl": ""
+  },
+  "GoogleReCaptchaV3": {
+    "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
+    "Secret":  ""
+  },
   "AllowedHosts": "*"
 }
