Changed some return responses, changed docker port

--- a/OpenSky.API/Properties/launchSettings.json
+++ b/OpenSky.API/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44641",
+      "applicationUrl": "http://localhost:5000",
       "sslPort": 0
     }
   },
@@ -31,7 +31,8 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
+      "publishAllPorts": true,
+      "httpPort": 5000
     }
   }
 }
