Implemented authentication with full user methods required for website

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -24,7 +24,9 @@
   },
   "OpenSky": {
     "DiscordInviteUrl": "",
-    "LogoUrl": ""
+    "LogoUrl": "",
+    "ValidateEmailUrl": "",
+    "ResetPasswordUrl": ""
   },
   "GoogleReCaptchaV3": {
     "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
