Support for api-dev server
Added application settings for captcha and automatic migrations enable
Added publishing profile for dev package to docker hub

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "OpenSkyConnectionString": ""
+    "OpenSkyConnectionString": "",
+    "ApplyMigrations": false  
   },
   "JWT": {
     "ValidAudience": "",
@@ -30,7 +31,8 @@
   },
   "GoogleReCaptchaV3": {
     "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
-    "Secret":  ""
+    "Secret": "",
+    "Enabled": true
   },
   "AllowedHosts": "*"
 }
