Added global admin setting and updated authentication controller
This is currently the only way to create admins, need to implement user management later

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -27,7 +27,8 @@
     "DiscordInviteUrl": "",
     "LogoUrl": "",
     "ValidateEmailUrl": "",
-    "ResetPasswordUrl": ""
+    "ResetPasswordUrl": "",
+    "GlobalAdmins": ""
   },
   "GoogleReCaptchaV3": {
     "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
