--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommonPasswordsValidator" Version="1.3.0" />
+    <PackageReference Include="CsvHelper" Version="27.1.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
     <PackageReference Include="MailKit" Version="2.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
