Added copy to output directory settings for csv files
Otherwise they aren't included in the docker image

--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -47,6 +47,12 @@
     <None Update="Datasets\a380airports.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Datasets\airports.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\ICAO.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Datasets\top50airports.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
