Sorted icao registration csv descending to ensure sub-codes get picked over the more general top level codes
Removed colombia ultralights
Expanded north korea code range to fully populate
Added custom russian, south korean and armenian codes
Increased max attempts to 20 to get australia completed (they have a very high utilization)

--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -12,6 +12,8 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/opensky-to/api</RepositoryUrl>
     <PackageProjectUrl>https://www.opensky.to</PackageProjectUrl>
+    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
