Added config to db context to return all datetimes as Kind=UTC
Added login token name config option
Added missing documentation

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -28,7 +28,8 @@
     "LogoUrl": "",
     "ValidateEmailUrl": "",
     "ResetPasswordUrl": "",
-    "GlobalAdmins": ""
+    "GlobalAdmins": "",
+    "LoginTokenName":  "website" 
   },
   "GoogleReCaptchaV3": {
     "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
