--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -25,6 +25,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\registry.hub.docker.com_openskyto_release.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommonPasswordsValidator" Version="1.3.0" />
     <PackageReference Include="CsvHelper" Version="27.2.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
