--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -25,7 +25,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <_WebToolingArtifacts Remove="Properties\PublishProfiles\registry.hub.docker.com_openskyto_release.pubxml" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\dockerhub_debug.pubxml" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\dockerhub_release.pubxml" />
   </ItemGroup>
 
   <ItemGroup>
