--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <PackageReference Include="CommonPasswordsValidator" Version="1.3.0" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     <PackageReference Include="MailKit" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
@@ -48,7 +49,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
-    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="5.13.1" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="5.13.2" />
   </ItemGroup>
 
   <ItemGroup>
