Got first cargo jobs generated

--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -59,6 +59,9 @@
     <None Update="Datasets\a380airports.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Datasets\cargo_types.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Datasets\ICAO.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
