Replaced image resize code to use MAUI

--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -39,6 +39,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="7.3.5" />
+    <PackageReference Include="Microsoft.Maui.Graphics" Version="7.0.101" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenSky.AirportsJSON" Version="0.3.0" />
