Notification controller complete
Added db migration
Added email background worker service
Missing: Add new method to db cleanup worker

--- a/OpenSky.API/OpenSky.API.csproj
+++ b/OpenSky.API/OpenSky.API.csproj
@@ -65,6 +65,9 @@
     <None Update="Datasets\top50airports.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="EmailTemplates\Notification.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="EmailTemplates\ResetPassword.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
