Fixes, fixes, fixes

--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -25,11 +25,11 @@
   },
   "OpenSky": {
     "DiscordInviteUrl": "",
-    "LogoUrl": "",
+    "LogoUrl": "https://www.opensky.to/img/logo/OpenSkyLogo128.png",
     "ValidateEmailUrl": "",
     "ResetPasswordUrl": "",
     "GlobalAdmins": "",
-    "LoginTokenName":  "website" 
+    "LoginTokenName": "website"
   },
   "GoogleReCaptchaV3": {
     "ApiUrl": "https://www.google.com/recaptcha/api/siteverify",
