--- a/OpenSky.API/appsettings.json
+++ b/OpenSky.API/appsettings.json
@@ -19,13 +19,14 @@
     "SmtpServer": "",
     "SmtpPort": 25,
     "FromAddress": "",
+    "FromName": "",
     "UserName": "",
     "Password": "",
     "SecureSocketOptions": "Auto"
   },
   "OpenSky": {
     "DiscordInviteUrl": "",
-    "LogoUrl": "https://www.opensky.to/img/logo/OpenSkyLogo128.png",
+    "LogoUrl": "",
     "ValidateEmailUrl": "",
     "ResetPasswordUrl": "",
     "GlobalAdmins": "",
